[package]
name = "snake-notes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tiberius = { version="0.12.3" , features = ["sql-browser-tokio", "chrono"]}
chrono = "0.4.40"
uuid = "1.15.1"
futures = "0.3.31"
tokio-stream = "0.1.17"
